arrumando nome do style dentro do index

--- a/index_zoo.html
+++ b/index_zoo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Zoológico de Guarulhos</title>
-    <link rel="stylesheet" href="Estilo_zoo.css">
+    <link rel="stylesheet" href="style_zoo.css">
 </head>
 
 <body>
@@ -287,4 +287,5 @@
         </p>
     </footer>
 </body>
+
 </html>
